; ModuleID = '/home/carl/AnghaBench/mpv/video/extr_mp_image_pool.c_mp_image_pool_set_allocator.c'
source_filename = "/home/carl/AnghaBench/mpv/video/extr_mp_image_pool.c_mp_image_pool_set_allocator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_image_pool = type { i8*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_image_pool_set_allocator(%struct.mp_image_pool* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.mp_image_pool*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.mp_image_pool* %0, %struct.mp_image_pool** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.mp_image_pool*, %struct.mp_image_pool** %4, align 8
  %9 = getelementptr inbounds %struct.mp_image_pool, %struct.mp_image_pool* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load %struct.mp_image_pool*, %struct.mp_image_pool** %4, align 8
  %12 = getelementptr inbounds %struct.mp_image_pool, %struct.mp_image_pool* %11, i32 0, i32 0
  store i8* %10, i8** %12, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
